# nonrec

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.txt  vcpkg.json
.github/workflows/: unit-tests.yml
bench/: main.cpp
conan/: clang.profile
include/: nonrec.h
test/: main.cpp
